생활코딩_WEB_HTML/CSS

--- a/2.html
+++ b/2.html
@@ -1,40 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1-HTML</title>
+<title>WEB2-CSS</title>
 <meata charset="utf-8">
-<style>
-  a{
-    color:black;
-    text-decoration:none;
-  }
-  h1{
-    font-size:50px;
-    text-align:center;
-    border-bottom:5px gray solid;
-    margin:0;
-    padding:15px;
-  }
-  ol{
-    border-right:3px gray solid;
-    width:100px;
-    margin:0;
-    padding:30px;
-  }
-#grid ol{
-  padding-left:33px;
-}
-  body{
-    margin:0;
-  }
-  #grid{
-    display:grid;
-    grid-template-columns:150px 1fr;
-  }
-  #grid #article{
-    padding:25px;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
