--- a/3.html
+++ b/3.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1-JavaScript</title>
+<title>WEB3-JavaScript</title>
 <meata charset="utf-8">
+<script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="nightDayHandler(this);">
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
